# micrograd-cpp

./: CMakeLists.txt  README.md
data/: moons_x.txt  moons_y.txt  plot_moons.py
mg/: CMakeLists.txt  engine.cpp  engine.h  engine_test.cpp  nn.cpp  nn.h  nn_test.cpp  value.cpp  value.h  value_test.cpp
